IRtest_out/061_sort_test1.err
irs/061_sort_test1.ll:46:29: error: invalid getelementptr indices
  %v43 = getelementptr i32, i32* %v12, i32 0, i32 %v42
                            ^
1 error generated.
